payment guncellendi hatalar giderildi